--- a/index.html
+++ b/index.html
@@ -118,9 +118,11 @@
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dresses <i class="fa fa-angle-right float-right mt-1"></i></a>
                             <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
                                 <a href="" class="dropdown-item">Men's Dresses</a>
-                                <p> readymade dresses available for men
+                                <p> readymade dresses available for men </p>
                                 <a href="" class="dropdown-item">Women's Dresses</a>
-                                <a href="" class="dropdown-item">Baby's Dresses</a>
+                                <p> readymade dresses available for women's </p>
+                                <a href="" class="dropdown-item">Teen's Dresses</a>
+                                <p> readymade dresses available for teens </p>
                             </div>
                         </div>
                         <a href="" class="nav-item nav-link">Shirts</a>
