--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dresses <i class="fa fa-angle-right float-right mt-1"></i></a>
                             <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
                                 <a href="" class="dropdown-item">Men's Outfits</a>
-                                <p> readymade dresses available for men </p>
+                                <p class="mx-md-1 px-5 animate__animated animate__bounceIn"> readymade dresses available for men </p>
                                 <a href="" class="dropdown-item">Women's outfits</a>
-                                <p> readymade dresses available for women's </p>
+                                <p class="mx-md-1 px-5 animate__animated animate__bounceIn"> readymade dresses available for women's </p>
                                 <a href="" class="dropdown-item">Teen's outfits</a>
-                                 <p class="mx-md-5 px-5 animate__animated animate__bounceIn"> readymade dresses available for teens </p>
+                                 <p class="mx-md-1 px-5 animate__animated animate__bounceIn"> readymade dresses available for teens </p>
                             </div>
                         </div>
                         <a href="" class="nav-item nav-link">Shirts</a>
