--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         </div>
                         
                 <div class="product-offer mb-30" style="height: 200px;">
-                    <img class="img-fluid" src="img/offer-1.jpg" alt="">
+                  <img class="position-absolute w-100 h-100" src="img/offer-1.jpg" style="object-fit: cover;">
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">Save 50%</h6>
                         <h3 class="text-white mb-3">Special Offer</h3>
@@ -209,7 +209,7 @@
                     </div>
                 </div>
                 <div class="product-offer mb-30" style="height: 200px;">
-                    <img class="img-fluid" src="img/offer-2.jpg" alt="">
+                    <img class="position-absolute w-100 h-100" src="img/offer-2.jpg" style="object-fit: cover;">
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">Save 60%</h6>
                         <h3 class="text-white mb-3">Special Offer</h3>
